#7 Refactoring do ContaCsvReader