@@ -1,10 +1,10 @@
 package br.com.ccs.contaspagar.domain.util;
 
-import br.com.ccs.contaspagar.domain.core.exception.ContasPagarException;
+import br.com.ccs.contaspagar.api.v1.model.input.CsvInput;
+import br.com.ccs.contaspagar.domain.core.exception.CsvReaderException;
 import br.com.ccs.contaspagar.domain.entity.Conta;
 import br.com.ccs.contaspagar.domain.vo.Situacao;
 import lombok.experimental.UtilityClass;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
@@ -14,19 +14,20 @@ import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+
+import static java.util.Objects.isNull;
 
 @UtilityClass
 public class ContaCsvReader {
 
-    public List<Conta> readCsv(MultipartFile file) {
+    public List<Conta> readCsv(CsvInput csvInput) {
 
-        if (file.isEmpty()) {
-            throw new ContasPagarException("O arquivo está vazio.");
+        if (isNull(csvInput.multipartFile()) || csvInput.multipartFile().isEmpty()) {
+            throw new CsvReaderException("O arquivo está vazio.");
         }
-
         try (BufferedReader reader = new BufferedReader(
-                new InputStreamReader(file.getInputStream(), StandardCharsets.UTF_8))) {
+                new InputStreamReader(csvInput.multipartFile().getInputStream(), StandardCharsets.UTF_8))) {
+
             AtomicInteger lineNumber = new AtomicInteger(0);
 
             return reader.lines()
@@ -34,9 +35,9 @@ public class ContaCsvReader {
                         lineNumber.incrementAndGet();
                         return parseLine(line, lineNumber.get());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
-            throw new ContasPagarException("Erro ao processar o arquivo CSV: " + e.getMessage(), e);
+            throw new CsvReaderException("Erro ao processar o arquivo CSV: " + e.getMessage(), e);
         }
     }
 
@@ -45,7 +46,7 @@ public class ContaCsvReader {
             String[] fields = line.split(",");
 
             if (fields.length != 5) {
-                throw new ContasPagarException(
+                throw new CsvReaderException(
                         String.format("Linha %d: número incorreto de campos. Esperado: 5, Encontrado: %d",
                                 lineNumber, fields.length));
             }
@@ -56,10 +57,11 @@ public class ContaCsvReader {
                     .valor(parseValor(fields[2], lineNumber))
                     .descricao(fields[3].trim())
                     .situacao(parseSituacao(fields[4], lineNumber))
+                    .importadaViaCsv(true)
                     .build();
 
         } catch (Exception e) {
-            throw new ContasPagarException(
+            throw new CsvReaderException(
                     String.format("Erro ao processar linha %d: %s", lineNumber, e.getMessage()), e);
         }
     }
@@ -68,7 +70,7 @@ public class ContaCsvReader {
         try {
             return LocalDate.parse(date.trim());
         } catch (DateTimeParseException e) {
-            throw new ContasPagarException(
+            throw new CsvReaderException(
                     String.format("Linha %d: formato de data inválido para %s: %s",
                             lineNumber, fieldName, date));
         }
@@ -82,7 +84,7 @@ public class ContaCsvReader {
         try {
             return new BigDecimal(valor.trim());
         } catch (NumberFormatException e) {
-            throw new ContasPagarException(
+            throw new CsvReaderException(
                     String.format("Linha %d: valor inválido: %s", lineNumber, valor));
         }
     }
@@ -91,7 +93,7 @@ public class ContaCsvReader {
         try {
             return Situacao.valueOf(situacao.trim().toUpperCase());
         } catch (IllegalArgumentException e) {
-            throw new ContasPagarException(
+            throw new CsvReaderException(
                     String.format("Linha %d: situação inválida: %s", lineNumber, situacao));
         }
     }
